# pydelfem2

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  setup.py
.github/workflows/: ubuntu.yml  updated_delfem2.yml
PyDelFEM2/: __init__.py  cad.py  cadmsh.py  fem.py  msh.py
PyDelFEM2/gl/: __init__.py  cadmshsimvis.py
examples_blender/: 01_simple.py  02_envtex.py  03_skin.py  10_mesh.py
examples_py/: 05_img_draw.py  80_rigging.py
examples_pyqt/: 40_cadmshsim.py
scripts/: build_macos.sh  macos_blender.sh
src_pybind/: py_funcs.h
src_pybind/core/: CMakeLists.txt  main.cpp  py_dynmsh.cpp  py_fem.cpp  py_field.cpp  py_ls.cpp  py_mshtopoio.cpp  py_primitive.cpp  py_rigging.cpp  py_sdf.cpp
src_pybind/gl/: CMakeLists.txt  main.cpp  py_sampler.cpp  py_texture.cpp
test_py/: test_cad.py  test_msh.py
